fixed banners on mobile, and adjusted form padding

--- a/styles/compiled-styles.css
+++ b/styles/compiled-styles.css
@@ -847,8 +847,8 @@ body {
 
   .content-home {
     width: 100%;
-    padding-top: 80px;
-    top: 70px; }
+    padding-top: 20px;
+    top: 460px; }
 
   .card-container {
     position: relative;
@@ -890,7 +890,8 @@ body {
         border-radius: 0px !important;
         padding-bottom: 30px; }
     .about-us .form {
-      padding-right: 0px !important; }
+      padding-right: 0px !important;
+      margin-right: 0px !important; }
     .about-us .quote-forms {
       margin-top: 0px;
       border-radius: 0px 0px 15px 15px !important; }
@@ -921,7 +922,8 @@ body {
         font-size: 24px;
         font-weight: bold; }
     .service-box .form {
-      padding-right: 0px; }
+      padding-right: 0px;
+      margin-right: 0px; }
     .service-box .title-icon {
       padding: 0px;
       margin: 0px; }
@@ -944,7 +946,7 @@ body {
       margin-bottom: 40px; }
 
   .sub-footer {
-    font-size: 12px;
+    font-size: 9px;
     position: relative !important;
     margin: 0px;
     z-index: 15; }
@@ -956,19 +958,23 @@ body {
   .banner-secondary {
     width: 100%;
     height: 350px;
-    background-attachment: scroll; }
+    background-attachment: fixed; }
     .banner-secondary h2 {
-      font-size: 28px; }
+      font-size: 24px;
+      font-weight: bold; }
     .banner-secondary .title-icon {
-      width: 60px;
-      height: 60px; }
+      width: 55px;
+      height: 55px;
+      margin-right: 10px; }
     .banner-secondary .inner-banner {
       width: 90%;
-      line-height: 60px;
-      top: 140px; }
+      line-height: 55px;
+      top: 140px;
+      text-align: center; }
     .banner-secondary p {
       width: 70%;
-      padding-top: 145px; }
+      padding-top: 145px;
+      opacity: 0.8; }
 
   .contact-box {
     width: 80%;
@@ -1002,13 +1008,21 @@ body {
     width: 100% !important;
     height: 60px !important; }
 
-  .mobile-banner {
-    display: block; }
-
   .divider {
     height: 1px !important; }
     .divider span {
-      font-size: 20px !important; } }
+      font-size: 20px !important; }
+
+  .mobile-banner {
+    display: block;
+    height: 350px;
+    width: 100%;
+    margin-top: 110px;
+    background-image: url("../res/banner1.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; } }
 /*@media only screen and (max-width: 1000px) {
   body {
     background-color: red !important;
