--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1214,8 +1214,8 @@ body {
 
   .content-home {
     width: 100%;
-    padding-top: $navHeight;
-    top: 70px;
+    padding-top: 20px;
+    top: 350px + $navHeight + $topbarHeight;
   }
 
   .card-container {
@@ -1283,6 +1283,7 @@ body {
 
     .form {
       padding-right: 0px !important;
+      margin-right: 0px !important;
     }
 
     .quote-forms {
@@ -1330,6 +1331,7 @@ body {
 
     .form {
       padding-right: 0px;
+      margin-right: 0px;
     }
 
     .title-icon {
@@ -1364,7 +1366,7 @@ body {
   }
 
   .sub-footer {
-    font-size: 12px;
+    font-size: 9px;
     position: relative !important;
     margin: 0px;
     z-index: 15;
@@ -1388,26 +1390,30 @@ body {
     //display: none;
     width: 100%;
     height: 350px;
-    background-attachment: scroll;
+    background-attachment: fixed;
 
     h2 {
-      font-size: 28px;
+      font-size: 24px;
+      font-weight: bold;
     }
 
     .title-icon {
-      width: 60px;
-      height: 60px;
+      width: 55px;
+      height: 55px;
+      margin-right: 10px;
     }
 
     .inner-banner {
       width: 90%;
-      line-height: 60px;
+      line-height: 55px;
       top: 140px;
+      text-align: center;
     }
 
     p {
       width: 70%;
       padding-top: 145px;
+      opacity: 0.8;
     }
   }
 
@@ -1461,16 +1467,24 @@ body {
 
   }
 
-  .mobile-banner {
-    display: block;
-  }
-
   .divider {
     height: 1px !important;
 
     span {
       font-size: 20px !important;
     }
+  }
+
+  .mobile-banner {
+    display: block;
+    height: 350px;
+    width: 100%;
+    margin-top: $navHeight + $topbarHeight;
+    background-image: url("../res/banner1.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 }
 
